--- a/sass/components/_media-text.scss
+++ b/sass/components/_media-text.scss
@@ -1,24 +1,21 @@
 @use '../abstracts/mixins' as *;
 
 .wp-block-media-text {
+    
+    overflow: hidden;
 
     .wp-block-media-text__content {
-        padding: 20%;
+        padding: var(--wp--custom--layout--block-gap);
     }
-    
-    &.has-media-on-the-right {
 
-        .wp-block-media-text__content {
-            padding: 0 var(--wp--custom--layout--block-gap-large) 0 0;
+    &.has-primary-30-background-color {
+        a {
+            color: var(--wp--preset--color--neutral-white) !important;
         }
     }
 
     @media ($below-mobile) {
         gap: var(--wp--custom--layout--block-gap-large);
-
-        .wp-block-media-text__content {
-            padding: var(--wp--custom--layout--block-gap);
-        }
     }
 }
 
