--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -3,6 +3,6 @@
 }
 
 [class*="has-heading-"][class*="-font-size"] {
-    //font-weight: 300;
+    line-height: var(--wp--custom--line-height--headings);
 }
 
