--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,3 +1,5 @@
+@use '../abstracts/mixins' as *;
+
 .wp-block-buttons .wp-block-button:not([class*="-with-arrow"]) .wp-block-button__link {
 	transition: transform 0.3s ease;
 	
@@ -38,10 +40,24 @@
 		transition: transform 0.3s ease;
 	}
 
+
 }
 
+.wp-block-button.is-style-with-arrow,
+.wp-block-button.is-style-outline-with-arrow {
+
+	:not(#masthead) & {
+		@media ($below-mobile) {
+				width: 100%;
+				flex-basis: 100%;
+			}
+		}
+}
+
+
+
 .wp-block-button.is-style-outline .wp-block-button__link {
-	padding: calc(1rem - 2px) 1.5rem !important;
+	padding: calc(1rem - 2px) 1.5rem;
 }
 
 .wp-block-button.is-style-outline-with-arrow .wp-block-button__link {
@@ -50,5 +66,27 @@
     border-width: 2px;
     border-style: solid;
     color: currentColor;
-	padding: calc(1rem - 2px) 1.5rem !important;
+	padding: calc(1rem - 2px) 1.5rem;
+}
+
+.wp-block-button.is-style-outline.btn-prev-slide,
+.wp-block-button.is-style-outline.btn-next-slide {
+
+	a.wp-block-button__link {
+		padding: 0 !important;
+		width: 56px;
+		height: 56px;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		border-width: 1px;
+	}
+    
+
+	&.disabled a.wp-block-button__link{
+		pointer-events: none;
+		opacity: 0.5;
+		filter: invert(0.5);
+	}
+
 }
